--- a/style.css
+++ b/style.css
@@ -1208,10 +1208,16 @@ in general anyone not viewing on a mobile device.
   .mobile-hide {
     display: none;
   }
+  section {
+    padding: 40px 0;
+  }
   section.first {
     background: url(images/cover2-mobile.jpg) no-repeat center center fixed;
     background-position: -5px -5px;
     padding: 0;
     height: auto;
+  }
+  section.about-you {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
