--- a/style.less
+++ b/style.less
@@ -1023,6 +1023,7 @@ in general anyone not viewing on a mobile device.
 	.byline { font-size: 1em;}
 	.mobile-hide {display: none;}
 
+	section{ padding: 40px 0;}
 
 	section.first{
 		background: url(images/cover2-mobile.jpg) no-repeat center center fixed;
@@ -1030,4 +1031,37 @@ in general anyone not viewing on a mobile device.
 		padding: 0;
 		height: auto;
 	}
+
+	section.about-you{
+	    border-top:1px solid rgba(0,0,0,0.10);
+	}
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
