--- a/style.less
+++ b/style.less
@@ -614,7 +614,7 @@ button,
 	white-space:nowrap;
 	text-overflow:ellipsis;
 	line-height:20px;
-	.transition(.3s, ease-out);
+
 }
 
 button:hover,
@@ -1026,10 +1026,12 @@ in general anyone not viewing on a mobile device.
 	section{ padding: 40px 0;}
 
 	section.first{
-		background: url(images/cover2-mobile.jpg) no-repeat center center fixed;
+		background: url(images/cover2.jpg) no-repeat center center fixed;
 		background-position: -5px -5px;
+		background-size: 450px 300px;
 		padding: 0;
 		height: auto;
+		p.huge { margin-bottom: 25px;}
 	}
 
 	section.about-you{
